docs/3.7/api/com.rakuten.tech.mobile.miniapp/-mini-app/index.md
[miniapp](../../index.md) / [com.rakuten.tech.mobile.miniapp](../index.md) / [MiniApp](./index.md)

# MiniApp

`abstract class MiniApp`

This represents the contract between the consuming application and the SDK
by which operations in the mini app ecosystem are exposed.
Should be accessed via [MiniApp.instance](instance.md).

### Functions

| [create](create.md) | Creates a mini app. The mini app is downloaded, saved and provides a [MiniAppDisplay](../-mini-app-display/index.md) when successful.`abstract suspend fun create(appId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`, miniAppMessageBridge: `[`MiniAppMessageBridge`](../../com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md)`, miniAppNavigator: `[`MiniAppNavigator`](../../com.rakuten.tech.mobile.miniapp.navigator/-mini-app-navigator/index.md)`? = null, miniAppFileChooser: `[`MiniAppFileChooser`](../../com.rakuten.tech.mobile.miniapp.file/-mini-app-file-chooser/index.md)`? = null, queryParams: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)` = ""): `[`MiniAppDisplay`](../-mini-app-display/index.md)<br>Creates a mini app using the mini app ID and version specified in [MiniAppInfo](../-mini-app-info/index.md). This should only be used in "Preview Mode". The mini app is downloaded, saved and provides a [MiniAppDisplay](../-mini-app-display/index.md) when successful.`abstract suspend fun create(appInfo: `[`MiniAppInfo`](../-mini-app-info/index.md)`, miniAppMessageBridge: `[`MiniAppMessageBridge`](../../com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md)`, miniAppNavigator: `[`MiniAppNavigator`](../../com.rakuten.tech.mobile.miniapp.navigator/-mini-app-navigator/index.md)`? = null, miniAppFileChooser: `[`MiniAppFileChooser`](../../com.rakuten.tech.mobile.miniapp.file/-mini-app-file-chooser/index.md)`? = null, queryParams: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)` = ""): `[`MiniAppDisplay`](../-mini-app-display/index.md) |
| [createWithUrl](create-with-url.md) | Creates a mini app using provided url. Mini app is NOT downloaded and cached in local, its content are read directly from the url. This should only be used for previewing a mini app from a local server.`abstract suspend fun createWithUrl(appUrl: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`, miniAppMessageBridge: `[`MiniAppMessageBridge`](../../com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md)`, miniAppNavigator: `[`MiniAppNavigator`](../../com.rakuten.tech.mobile.miniapp.navigator/-mini-app-navigator/index.md)`? = null, miniAppFileChooser: `[`MiniAppFileChooser`](../../com.rakuten.tech.mobile.miniapp.file/-mini-app-file-chooser/index.md)`? = null, queryParams: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)` = ""): `[`MiniAppDisplay`](../-mini-app-display/index.md) |
| [fetchInfo](fetch-info.md) | Fetches meta data information of a mini app.`abstract suspend fun fetchInfo(appId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`MiniAppInfo`](../-mini-app-info/index.md) |
| [getCustomPermissions](get-custom-permissions.md) | Get custom permissions with grant results per MiniApp from this SDK.`abstract fun getCustomPermissions(miniAppId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`MiniAppCustomPermission`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission/index.md) |
| [getDownloadedManifest](get-downloaded-manifest.md) | Get the currently downloaded manifest information e.g. required and optional permissions.`abstract fun getDownloadedManifest(appId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`MiniAppManifest`](../-mini-app-manifest/index.md)`?` |
| [getMiniAppInfoByPreviewCode](get-mini-app-info-by-preview-code.md) | Fetches MiniappInfo by preview code.`abstract suspend fun getMiniAppInfoByPreviewCode(previewCode: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`PreviewMiniAppInfo`](../-preview-mini-app-info/index.md) |
| [getMiniAppManifest](get-mini-app-manifest.md) | Get the manifest information e.g. required and optional permissions.`abstract suspend fun getMiniAppManifest(appId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`, versionId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`MiniAppManifest`](../-mini-app-manifest/index.md) |
| [listDownloadedWithCustomPermissions](list-downloaded-with-custom-permissions.md) | lists out the mini applications available with custom permissions in cache.`abstract fun listDownloadedWithCustomPermissions(): `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`MiniAppInfo`](../-mini-app-info/index.md)`, `[`MiniAppCustomPermission`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission/index.md)`>>` |
| [listMiniApp](list-mini-app.md) | Fetches and lists out the mini applications available in the MiniApp Ecosystem.`abstract suspend fun listMiniApp(): `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`MiniAppInfo`](../-mini-app-info/index.md)`>` |
| [setCustomPermissions](set-custom-permissions.md) | Store custom permissions with grant results per MiniApp inside this SDK.`abstract fun setCustomPermissions(miniAppCustomPermission: `[`MiniAppCustomPermission`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission/index.md)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |

### Companion Object Functions

| [instance](instance.md) | Instance of [MiniApp](./index.md) which uses the default config settings, as defined in AndroidManifest.xml. For usual scenarios the default config suffices. However, should it be required to change the config at runtime for QA purpose or similar, another [MiniAppSdkConfig](../-mini-app-sdk-config/index.md) can be provided for customization. [setConfigAsDefault](instance.md#com.rakuten.tech.mobile.miniapp.MiniApp.Companion$instance(com.rakuten.tech.mobile.miniapp.MiniAppSdkConfig, kotlin.Boolean)/setConfigAsDefault) is to use the config as default.`fun instance(settings: `[`MiniAppSdkConfig`](../-mini-app-sdk-config/index.md)` = defaultConfig, setConfigAsDefault: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)` = true): `[`MiniApp`](./index.md) |

